Move admin link to navbar

--- a/DjangoWebProject1/app/templates/base.html
+++ b/DjangoWebProject1/app/templates/base.html
@@ -29,11 +29,12 @@
                         </li>
                     </ul>
                 {% endwith %}
-                <form action="{% url 'searchmovies' %}" method="post" class="d-flex" role="search">
+                <form action="{% url 'searchmovies' %}" method="post" class="d-flex me-2" role="search">
                     {% csrf_token %}
                     <input class="form-control me-2" name="title" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
+                <a href="{% url 'admin:index' %}" class="btn btn-warning">Admin Dashboard</a>
             </div>
         </div>
     </nav>
